hubSide/force-app/main/default/objects/Case/fields/A_traiter_GS__c.field-meta.xml
<CustomField>
    <fullName>A_traiter_GS__c</fullName>
    <formula>IF(
    OR( 
        ISPICKVAL(Status, &apos;Attribué&apos;),
        Tech_Nombre_tache_ouverte__c &gt; 0,
        ISBLANK(Attente_client_final__c)         
    ),
    IMAGE(&quot;/resource/AtraiterGS&quot;, &quot;Paiement&quot; , 32, 32),
    &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A traiter GS</label>
    <type>Text</type>
</CustomField>