hubSide/force-app/main/default/objects/Case/fields/AdherentCategory__c.field-meta.xml
<CustomField>
    <fullName>AdherentCategory__c</fullName>
    <description>Champ formule remontant l&apos;information depuis la fiche client</description>
    <formula>TEXT( Account.AdherentCategory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catégorie adhérent</label>
    <type>Text</type>
</CustomField>