hubSide/force-app/main/default/objects/Case/fields/Alert_icone__c.field-meta.xml
<CustomField>
    <fullName>Alert_icone__c</fullName>
    <formula>IF(
TECH_NumberAlertWaiting__c &gt; 0,
IMAGE(&quot;/resource/KO_Icon&quot;, &quot;KO&quot;, 32, 32),
IMAGE(&quot;/resource/OK_Icon&quot;, &quot;OK&quot;, 32, 32)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suivi alert</label>
    <type>Text</type>
</CustomField>