hubSide/force-app/main/default/objects/Case/fields/AlertText__c.field-meta.xml
<CustomField>
    <fullName>AlertText__c</fullName>
    <description>Use this field to save alert description in the approval process</description>
    <label>Alertes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>