hubSide/force-app/main/default/objects/Case/fields/AnswerEmitter__c.field-meta.xml
<CustomField>
    <fullName>AnswerEmitter__c</fullName>
    <description>Service ayant traité le dossier de réclamation</description>
    <formula>IF( Record_Type_Name__c = &apos;Réclamation&apos; , IF( ISPICKVAL(Classification__c, &apos;&apos;), &apos;&apos; , IF( OR( ISPICKVAL( Classification__c, &apos;Demande client&apos; ) , ISPICKVAL( Classification__c, &apos;R1&apos; ) ) , &apos;Service Qualité&apos; , &apos;Service Juridique&apos; ) ) , &apos;&apos;)</formula>
    <label>Emetteur de la réponse</label>
    <type>Text</type>
</CustomField>