hubSide/force-app/main/default/objects/Case/fields/AnswerNature__c.field-meta.xml
<CustomField>
    <fullName>AnswerNature__c</fullName>
    <description>Indique si la réponse à la réclamation est favorable ou non</description>
    <label>Nature de la réponse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Favorable</fullName>
            </value>
            <value>
                <fullName>PartiallyFavorable</fullName>
                <label>Favorable partiellement</label>
            </value>
            <value>
                <fullName>Refused</fullName>
                <label>Refus</label>
            </value>
            <value>
                <fullName>NotApplicable</fullName>
                <label>Sans objet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>