hubSide/force-app/main/default/objects/Case/fields/Appareil_repare__c.field-meta.xml
<CustomField>
    <fullName>Appareil_repare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appareil réparé</label>
    <type>Checkbox</type>
</CustomField>