hubSide/force-app/main/default/objects/Case/fields/Appel_client_suite_decision__c.field-meta.xml
<CustomField>
    <fullName>Appel_client_suite_decision__c</fullName>
    <description>Date du rappel effectuer par le TC Sinistre.</description>
    <label>Date appel client suite à la décision</label>
    <type>Date</type>
</CustomField>