hubSide/force-app/main/default/objects/Case/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <description>Typologie du déclarant</description>
    <label>Réclamant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Adhérent</label>
            </value>
            <value>
                <fullName>InjuredPartyRightholders</fullName>
                <label>Tiers lesé - Ayant droit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>