hubSide/force-app/main/default/objects/Case/fields/Asset_status__c.field-meta.xml
<CustomField>
    <fullName>Asset_status__c</fullName>
    <description>Statut du contrat au moment de la déclaration du sinistre</description>
    <label>Statut du contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>