hubSide/force-app/main/default/objects/Case/fields/AssetSAV__c.field-meta.xml
<CustomField>
    <fullName>AssetSAV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssetSAV</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>SAV</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>SAV</relationshipLabel>
    <relationshipName>CasesSAV</relationshipName>
    <type>Lookup</type>
</CustomField>