hubSide/force-app/main/default/objects/Case/fields/Associated_formula__c.field-meta.xml
<CustomField>
    <fullName>Associated_formula__c</fullName>
    <description>Formule du contrat associé lors de la déclaration du sinistre</description>
    <label>Formule Associée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>