hubSide/force-app/main/default/objects/Case/fields/AssociatedSinister__c.field-meta.xml
<CustomField>
    <fullName>AssociatedSinister__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dossier Sinistre concerné par la Réclamation, Demande</description>
    <label>Sinistre associé</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sinistre clôturé, Sinistre, SinistreBApp</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Dossiers associés</relationshipLabel>
    <relationshipName>AssociatedCase</relationshipName>
    <type>Lookup</type>
</CustomField>