hubSide/force-app/main/default/objects/Case/fields/Attente_action_GS__c.field-meta.xml
<CustomField>
    <fullName>Attente_action_GS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attente d&apos;une action GS ?</label>
    <type>Checkbox</type>
</CustomField>