hubSide/force-app/main/default/objects/Case/fields/Attente_colis__c.field-meta.xml
<CustomField>
    <fullName>Attente_colis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attente colis</label>
    <type>Checkbox</type>
</CustomField>