hubSide/force-app/main/default/objects/Case/fields/Attente_documents__c.field-meta.xml
<CustomField>
    <fullName>Attente_documents__c</fullName>
    <label>Attente documents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <label>Reçu(s)</label>
            </value>
            <value>
                <fullName>Valid</fullName>
                <label>Valide(s)</label>
            </value>
            <value>
                <fullName>Expected</fullName>
                <default>true</default>
                <label>Attendu(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>