hubSide/force-app/main/default/objects/Case/fields/Attente_Prime__c.field-meta.xml
<CustomField>
    <fullName>Attente_Prime__c</fullName>
    <label>Attente Prime</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>