hubSide/force-app/main/default/objects/Case/fields/Attente_reglement__c.field-meta.xml
<CustomField>
    <fullName>Attente_reglement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attente de règlement</label>
    <type>Checkbox</type>
</CustomField>