hubSide/force-app/main/default/objects/Case/fields/CanalChannel__c.field-meta.xml
<CustomField>
    <fullName>CanalChannel__c</fullName>
    <label>Canal de contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Print</fullName>
                <label>Courrier</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Téléphone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>