hubSide/force-app/main/default/objects/Case/fields/CaseTreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CaseTreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Personne ayant réalisé le traitement du dossier de réclamation</description>
    <label>Dossier traité par</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reclamations</relationshipName>
    <type>Lookup</type>
</CustomField>