hubSide/force-app/main/default/objects/Case/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Indique si la demande est une demande client / R1 / R2</description>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande client</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>