hubSide/force-app/main/default/objects/Case/fields/ClientDeclarationValidationDate__c.field-meta.xml
<CustomField>
    <fullName>ClientDeclarationValidationDate__c</fullName>
    <description>Date of client validation for its case declaration (claim)</description>
    <label>Date déclaration client</label>
    <type>Date</type>
</CustomField>