hubSide/force-app/main/default/objects/Case/fields/ClosedDateBappli__c.field-meta.xml
<CustomField>
    <fullName>ClosedDateBappli__c</fullName>
    <description>Date de cloture du sinistre dans le système externe (B-Appli)</description>
    <label>Date de clôture B-Appli</label>
    <type>Date</type>
</CustomField>