hubSide/force-app/main/default/objects/Case/fields/Commentaire_decision__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_decision__c</fullName>
    <label>Commentaire sur la décision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>