hubSide/force-app/main/default/objects/Case/fields/Commentaire_recours__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_recours__c</fullName>
    <label>Commentaire recours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>