hubSide/force-app/main/default/objects/Case/fields/Commentaire_sur_le_blocage__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_sur_le_blocage__c</fullName>
    <label>Commentaire sur le blocage</label>
    <type>TextArea</type>
</CustomField>