hubSide/force-app/main/default/objects/Case/fields/CreatedDateBAppl__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateBAppl__c</fullName>
    <description>use for data migration to save created date</description>
    <label>Date création sinistre (B-App)</label>
    <type>Date</type>
</CustomField>