hubSide/force-app/main/default/objects/Case/fields/Date_comission__c.field-meta.xml
<CustomField>
    <fullName>Date_comission__c</fullName>
    <description>Date à laquelle le gestionnaire met le sinistre en cours de Commission (Validation Prime + 1000€).
Date du jour à laquelle le dossier est mis en attente.</description>
    <label>Date de la comission</label>
    <type>Date</type>
</CustomField>