hubSide/force-app/main/default/objects/Case/fields/Date_de_blocage__c.field-meta.xml
<CustomField>
    <fullName>Date_de_blocage__c</fullName>
    <label>Date de blocage</label>
    <type>Date</type>
</CustomField>