hubSide/force-app/main/default/objects/Case/fields/Date_de_la_r_ponse__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_r_ponse__c</fullName>
    <label>Date de la réponse</label>
    <type>Date</type>
</CustomField>