hubSide/force-app/main/default/objects/Case/fields/Date_decision__c.field-meta.xml
<CustomField>
    <fullName>Date_decision__c</fullName>
    <description>Date à laquelle le GS décide de la prise en charge à adopter (validation/refus/annulation).
A remplir pour réparation – échange – prime
En attente : date du jour à laquelle le dossier est mis en attente</description>
    <label>Date de la décision GS</label>
    <type>Date</type>
</CustomField>