hubSide/force-app/main/default/objects/Case/fields/Date_dossier_complet__c.field-meta.xml
<CustomField>
    <fullName>Date_dossier_complet__c</fullName>
    <label>Date dossier complet</label>
    <type>Date</type>
</CustomField>