hubSide/force-app/main/default/objects/Case/fields/Date_et_Heure_de_suspension__c.field-meta.xml
<CustomField>
    <fullName>Date_et_Heure_de_suspension__c</fullName>
    <label>Date et Heure de suspension</label>
    <type>DateTime</type>
</CustomField>