hubSide/force-app/main/default/objects/Case/fields/Date_heure_du_dernier_appel_SMS__c.field-meta.xml
<CustomField>
    <fullName>Date_heure_du_dernier_appel_SMS__c</fullName>
    <label>Date &amp; heure du dernier appel/SMS</label>
    <type>DateTime</type>
</CustomField>