hubSide/force-app/main/default/objects/Case/fields/Date_ordre__c.field-meta.xml
<CustomField>
    <fullName>Date_ordre__c</fullName>
    <description>Date de traçage des pièces demandées (soit dossier incomplet, soit recours accepté avec pièces manquantes)</description>
    <label>Date de l’ordre</label>
    <type>Date</type>
</CustomField>