hubSide/force-app/main/default/objects/Case/fields/Date_re_etude__c.field-meta.xml
<CustomField>
    <fullName>Date_re_etude__c</fullName>
    <description>Date de demande de ré-étude de dossier suite refus de prise en charge.</description>
    <label>Date de ré-étude</label>
    <type>Date</type>
</CustomField>