hubSide/force-app/main/default/objects/Case/fields/Date_reception__c.field-meta.xml
<CustomField>
    <fullName>Date_reception__c</fullName>
    <description>Date de réception côté SFAM du document papier.</description>
    <label>Date de réception</label>
    <type>Date</type>
</CustomField>