hubSide/force-app/main/default/objects/Case/fields/Date_refus__c.field-meta.xml
<CustomField>
    <fullName>Date_refus__c</fullName>
    <description>Date à laquelle le gestionnaire établit le refus de prise en charge.</description>
    <label>Date de refus</label>
    <type>Date</type>
</CustomField>