hubSide/force-app/main/default/objects/Case/fields/Date_reponse_commission__c.field-meta.xml
<CustomField>
    <fullName>Date_reponse_commission__c</fullName>
    <description>Date de retour de Commission.</description>
    <label>Date de réponse commission</label>
    <type>Date</type>
</CustomField>