hubSide/force-app/main/default/objects/Case/fields/Date_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Date_sinistre__c</fullName>
    <description>JJ/MM/AAAA</description>
    <label>Date du sinistre</label>
    <type>Date</type>
</CustomField>