hubSide/force-app/main/default/objects/Case/fields/Date_suspension__c.field-meta.xml
<CustomField>
    <fullName>Date_suspension__c</fullName>
    <label>Date de suspension</label>
    <type>Date</type>
</CustomField>