hubSide/force-app/main/default/objects/Case/fields/Decision_gestionnaire__c.field-meta.xml
<CustomField>
    <fullName>Decision_gestionnaire__c</fullName>
    <label>Décision gestionnaire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepté</fullName>
            </value>
            <value>
                <fullName>Annulation client</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>En attente dossier</fullName>
            </value>
            <value>
                <fullName>En cours d&apos;expertise</fullName>
            </value>
            <value>
                <fullName>Classé sans suite</fullName>
            </value>
            <value>
                <fullName>Rejeté</fullName>
            </value>
            <value>
                <fullName>Primes</fullName>
            </value>
            <value>
                <fullName>Echange</fullName>
            </value>
            <value>
                <fullName>Réparation</fullName>
            </value>
            <value>
                <fullName>Règlement par le client</fullName>
            </value>
            <value>
                <fullName>Refusé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>