hubSide/force-app/main/default/objects/Case/fields/DeclarationCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>DeclarationCreatedDate__c</fullName>
    <description>Creation date of the declaration from the external service such as the website</description>
    <label>Date de création de la déclaration</label>
    <type>DateTime</type>
</CustomField>