hubSide/force-app/main/default/objects/Case/fields/Delai_dossier_complet__c.field-meta.xml
<CustomField>
    <fullName>Delai_dossier_complet__c</fullName>
    <formula>TODAY() - Date_dossier_complet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai dossier complet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>