hubSide/force-app/main/default/objects/Case/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <description>Used by the Web when the user wants to be delivered to a different address from the Account one</description>
    <label>Adresse de livraison</label>
    <type>TextArea</type>
</CustomField>