hubSide/force-app/main/default/objects/Case/fields/Demande_de_rapatriement__c.field-meta.xml
<CustomField>
    <fullName>Demande_de_rapatriement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande de rapatriement</label>
    <type>Checkbox</type>
</CustomField>