hubSide/force-app/main/default/objects/Case/fields/Dernier_commentaire__c.field-meta.xml
<CustomField>
    <fullName>Dernier_commentaire__c</fullName>
    <label>Dernier commentaire réception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>