hubSide/force-app/main/default/objects/Case/fields/Dernier_commentaire_incomplet__c.field-meta.xml
<CustomField>
    <fullName>Dernier_commentaire_incomplet__c</fullName>
    <label>Dernier commentaire incomplet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>