hubSide/force-app/main/default/objects/Case/fields/Dernier_commentaire_refus__c.field-meta.xml
<CustomField>
    <fullName>Dernier_commentaire_refus__c</fullName>
    <description>Typologie du Refus de prise en charge</description>
    <label>Dernier commentaire refus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>