hubSide/force-app/main/default/objects/Case/fields/DisplayedCaseRedactor__c.field-meta.xml
<CustomField>
    <fullName>DisplayedCaseRedactor__c</fullName>
    <description>Personne ayant réalisé la saisie initiale du dossier de réclamation. Affichage du contenu du champ CreatedBy ou TechCaseRedactor.</description>
    <formula>IF(ISBLANK(TechCaseRedactor__c),HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;/lightning/r/&apos; &amp; CreatedBy.Id &amp; &apos;/view&apos;, CreatedBy.FirstName &amp; &apos; &apos; &amp;  CreatedBy.LastName),TechCaseRedactor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF(ISBLANK(TechCaseRedactor__c),HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;/lightning/r/&apos; &amp; CreatedBy.Id &amp; &apos;/view&apos;, CreatedBy.FirstName &amp; &apos; &apos; &amp;  CreatedBy.LastName, &apos;_self&apos;),TechCaseRedactor__c)</inlineHelpText>
    <label>Dossier saisi par</label>
    <type>Text</type>
</CustomField>