hubSide/force-app/main/default/objects/Case/fields/Echange_appareil__c.field-meta.xml
<CustomField>
    <fullName>Echange_appareil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Echange appareil</label>
    <type>Checkbox</type>
</CustomField>