hubSide/force-app/main/default/objects/Case/fields/Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact__c</fullName>
    <label>Email Contact</label>
    <type>Email</type>
</CustomField>