hubSide/force-app/main/default/objects/Case/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>