hubSide/force-app/main/default/objects/Case/fields/Equipement_client__c.field-meta.xml
<CustomField>
    <fullName>Equipement_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement client</label>
    <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
    <relationshipLabel>Demandes associées</relationshipLabel>
    <relationshipName>Demandes_associees</relationshipName>
    <type>Lookup</type>
</CustomField>