hubSide/force-app/main/default/objects/Case/fields/Form_attente_paiement__c.field-meta.xml
<CustomField>
    <fullName>Form_attente_paiement__c</fullName>
    <formula>CASE(	Asset.Etat_paiement__c , &quot;Impayé&quot;, &quot;Oui&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form_attente_paiement</label>
    <type>Text</type>
</CustomField>