hubSide/force-app/main/default/objects/Case/fields/Heure_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Heure_sinistre__c</fullName>
    <label>Heure du sinistre</label>
    <type>Time</type>
</CustomField>