hubSide/force-app/main/default/objects/Case/fields/Insured_Item__c.field-meta.xml
<CustomField>
    <fullName>Insured_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured Item</label>
    <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>