hubSide/force-app/main/default/objects/Case/fields/InternalComments__c.field-meta.xml
<CustomField>
    <fullName>InternalComments__c</fullName>
    <description>Commentaires internes au sinistre - Case&apos;s internal comments</description>
    <label>Commentaires internes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>