hubSide/force-app/main/default/objects/Case/fields/IsAbroad__c.field-meta.xml
<CustomField>
    <fullName>IsAbroad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Track if the case occurred abroad from the country of the asset</description>
    <label>A l&apos;étranger</label>
    <type>Checkbox</type>
</CustomField>