hubSide/force-app/main/default/objects/Case/fields/JustifiedRequest__c.field-meta.xml
<CustomField>
    <fullName>JustifiedRequest__c</fullName>
    <description>Indique si la demande est considérée comme légitime</description>
    <label>Demande justifiée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Oui</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Non</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>