hubSide/force-app/main/default/objects/Case/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Défini l&apos;importance du dossier en fonction du service traitant le dossier ou le nombre de précédents</description>
    <formula>IF( AND( Record_Type_Name__c = &apos;Réclamation&apos; , OR(  AnswerEmitter__c = &apos;Service Juridique&apos; ,  NumberOfPrevious__c &gt; 1 ) ) , 2 , 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>