hubSide/force-app/main/default/objects/Case/fields/Lieu_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Lieu_sinistre__c</fullName>
    <label>Lieu du sinistre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VacationPlace</fullName>
                <label>Lieu de vacances</label>
            </value>
            <value>
                <fullName>Office</fullName>
                <label>Bureau</label>
            </value>
            <value>
                <fullName>Home</fullName>
                <label>Domicile</label>
            </value>
            <value>
                <fullName>PublicPlace</fullName>
                <label>Lieu public</label>
            </value>
            <value>
                <fullName>PublicTransport</fullName>
                <label>Transport public</label>
            </value>
            <value>
                <fullName>Vehicule</fullName>
                <label>Véhicule</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Autres</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>