hubSide/force-app/main/default/objects/Case/fields/Livraison__c.field-meta.xml
<CustomField>
    <fullName>Livraison__c</fullName>
    <description>Concaténation du numéro de livraison, de la date de livraison (AAAA-MM-JJ), du code client, du prénom du client, du nom du client et de la ville du client.</description>
    <label>Livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>