hubSide/force-app/main/default/objects/Case/fields/Montant_cout_interne__c.field-meta.xml
<CustomField>
    <fullName>Montant_cout_interne__c</fullName>
    <label>Montant coût interne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>