hubSide/force-app/main/default/objects/Case/fields/Montant_geste_co__c.field-meta.xml
<CustomField>
    <fullName>Montant_geste_co__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Montant du geste commercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>