hubSide/force-app/main/default/objects/Case/fields/Montant_prime__c.field-meta.xml
<CustomField>
    <fullName>Montant_prime__c</fullName>
    <label>Montant prime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>