hubSide/force-app/main/default/objects/Case/fields/Montant_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Montant_sinistre__c</fullName>
    <label>Coût global</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>