hubSide/force-app/main/default/objects/Case/fields/Motif_refus__c.field-meta.xml
<CustomField>
    <fullName>Motif_refus__c</fullName>
    <label>Motif refus</label>
    <length>90</length>
    <type>Text</type>
</CustomField>