hubSide/force-app/main/default/objects/Case/fields/Num_sinistre_B_Appli__c.field-meta.xml
<CustomField>
    <fullName>Num_sinistre_B_Appli__c</fullName>
    <description>Numéro de sinistre qui se suit et auto-généré par B-Appli</description>
    <label>Numéro de sinistre B-Appli</label>
    <length>20</length>
    <type>Text</type>
</CustomField>