hubSide/force-app/main/default/objects/Case/fields/Number_of_Alert_plafond_depasse__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Alert_plafond_depasse__c</fullName>
    <label>Nombre Alert plafond depasse</label>
    <summaryFilterItems>
        <field>Alert__c.SalesDiscountMotif__c</field>
        <operation>equals</operation>
        <value>Plafond dépassé</value>
    </summaryFilterItems>
    <summaryForeignKey>Alert__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>