hubSide/force-app/main/default/objects/Case/fields/NumberOfPrevious__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPrevious__c</fullName>
    <description>Nombre de dossiers de réclamations déclarés par le même client pour le même sujet (contrat / thème)</description>
    <label>Nombre de précédents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>